# garda-code-action

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.github_action  Dockerfile.github_action_dockerhub  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  action.yaml  action.yml  github-app-manifest.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml
.github/workflows/: build-and-test.yaml  ci.yml  code_coverage.yaml  e2e_tests.yaml  garda-code-action-review.yaml  garda.yml  publish.yml
core-abilities/: index.html
core-abilities/compression_strategy/: index.html
core-abilities/dynamic_context/: index.html
core-abilities/fetching_ticket_context/: index.html
core-abilities/interactivity/: index.html
core-abilities/metadata/: index.html
core-abilities/self_reflection/: index.html
docker/: Dockerfile
docker/mosaico/: README.md  (+2 more)
docs/: README.md  architecture.md  claude-code-action-audit.md  hosted-token-exchange.md  mcp-compat.md  mkdocs.yml  publish-action.md  release-readiness.md  setup-github-app.md  typescript-parity-audit.md
examples/: garda-fix-with-github-app.yml  garda-readonly-locked-tools.yml  garda-review-comprehensive.yml  garda-review-default-token.yml  garda-review-filtered-paths.yml  garda-review-token-exchange.yml  garda-review-with-github-app.yml  garda-review.yml  garda-security-review.yml
faq/: index.html
garda/: cli.py  cli_pip.py  config_loader.py  custom_merge_loader.py
github_action/: entrypoint.sh
installation/: index.html
scripts/: build.mjs  simulate.mjs
search/: search_index.json
src/: config.ts  index.ts  simulate.ts
summary/: index.html
test/: branch-cleanup.test.ts  branch-template.test.ts  comment-format.test.ts  context-fixtures.test.ts  custom-instructions.test.ts  default-ignore.test.ts  e2e-flow.test.ts  fix-mode-detection.test.ts  image-downloader.test.ts  inline-classifier.test.ts  inline-comments.test.ts  inline-reply.test.ts  permissions.test.ts  progress-comment.test.ts  responses-runner.test.ts  subprocess-env.test.ts  token.test.ts  tool-policy.test.ts  trigger.test.ts  trusted-config.test.ts
tools/: index.html
usage-guide/: index.html
(+228 files in other folders)
