[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garda-code-action"
version = "0.36.0"

authors = [
  { name = "Neosantara", email = "er_rickow@neosantara.xyz" },
]

maintainers = [
  { name = "ErRickow", email = "er_rickow@neosantara.xyz" },
]

description = "Garda Code Action reviews pull requests with Neosantara while preserving Garda Code Action workflows."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review", "Neosantara", "Garda"]
license = { file = "LICENSE" }

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/neosantara-xyz/garda-code-action"
"Documentation" = "https://github.com/neosantara-xyz/garda-code-action/tree/main/docs/docs"
"Repository" = "https://github.com/neosantara-xyz/garda-code-action"
"Issues" = "https://github.com/neosantara-xyz/garda-code-action/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "garda*",
] # include garda and any sub-packages it finds under it.

[project.scripts]
garda-code-action = "garda.cli:run"
[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

lint.ignore = ["E999", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
tests = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes"
console_output_style = "progress"
